--- a/index.html
+++ b/index.html
@@ -5,12 +5,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Сюда подключаем стили -->
-    <title>Document</title>
+    <title>SMOOTHIE</title>
 </head>
 
 <body>
-    <header>hello</header>
-    
+    <header>
+        <div>
+            <nav>
+                <ul>
+                    <li><a href="">Shop</a></li>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Story</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Testimonials</a></li>
+                </ul>
+            </nav>
+            <a href=""><img src="" alt=""></a>
+            <div>
+                <ul>
+                    <li><a href=""><img src="" alt=""></a></li>
+                    <li><a href=""><img src="" alt=""></a></li>
+                    <li><a href=""><img src="" alt=""></a>
+                    <span>3</span></li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <li><a href=""><img src="" alt=""></a></li>
+                    <li><a href=""><img src="" alt=""></a></li>
+                    <li><a href=""><img src="" alt=""></a></li>
+                </ul>
+            </div>
+        </div>
+        <div><button>Shop now</button></div>
+        <h1>SMOOTHIE</h1>
+    </header>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+
 </body>
 
 </html>
