add ul in section products

--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
         <div><button>Shop now</button></div>
         <h1>SMOOTHIE</h1>
     </header>
-    <section></section>
+    <section><ul>
+        <li><img src="" alt=""></li>
+        <li><img src="" alt=""></li>
+        <li><img src="" alt=""></li>
+        <li><img src="" alt=""></li>
+    </ul></section>
     <section></section>
     <section></section>
     <section></section>
