add section about

--- a/index.html
+++ b/index.html
@@ -77,12 +77,23 @@
             <h3>Made With Love</h3>
             <img src="" alt="">
         </div>
-        
-
-
-        
-    </section>
-    <section></section>
+    </section>    <!-- What are these smoothies? -->
+    <section>
+        <h2>What makes Smoothie an awesome drink?</h2>
+        <div>
+            <ul>
+                <li>Crunchy Puffs Texture</li>
+                <li>100 Calories per drink</li>
+                <li> 4g Plant Protein</li>
+                <li>Good source of Magnesium & Vitamin B6</li>
+                <li>No Sugar in our Savory Flavors</li>
+                <li>Non-GMO, Vegan & Paleo</li>
+                <li>Gluten-Free & Grain-Free</li>
+                <li>Corn-Free & Soy-Free</li>
+            </ul>
+        </div>
+        <button>About Organic Smoothie</button>
+    </section>    <!-- about -->
     <section></section>
     <section></section>
 
