add section products

--- a/index.html
+++ b/index.html
@@ -94,9 +94,35 @@
         </div>
         <button>About Organic Smoothie</button>
     </section>    <!-- about -->
-    <section></section>
-    <section></section>
-
+    <section>
+        <div>
+            <h3>Dark Chocolate Smoothie</h3>
+            <span>100 ml</span>
+            <button>Buy</button>
+        </div>
+        <div>
+            <h3>Vegan Lettuce Smoothie</h3>
+            <span>100 ml</span>
+            <button>Buy</button>
+        </div>
+        <div>
+            <h3>Lemon Ginger Smoothie</h3>
+            <span>100 ml</span>
+            <button>Buy</button>
+        </div>
+        <div>
+            <h3>Turmeric Garlic Smoothie</h3>
+            <span>100 ml</span>
+            <button>Buy</button>
+        </div>
+        
+    </section> <!-- products -->
+    <section></section> <!-- our story -->
+    <section>
+    </section> <!-- Testimonials -->
+<section></section> <!-- Our Blog -->
+<section></section> <!-- Instagram -->
+<footer></footer>
 </body>
 
 </html>
