add section our story

--- a/index.html
+++ b/index.html
@@ -117,7 +117,12 @@
         </div>
         
     </section> <!-- products -->
-    <section></section> <!-- our story -->
+    <section>
+        <h2>Our story</h2>
+        <p>As products typically using raw fruits or vegetables, smoothies include dietary fiber (e.g. pulp, skin, and seeds) and so are thicker than fruit juice, often with a consistency similar to a milkshake.</p>
+        <button>Who we are</button>
+        <img src="" alt="">
+    </section> <!-- our story -->
     <section>
     </section> <!-- Testimonials -->
 <section></section> <!-- Our Blog -->
