--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
         <img src="" alt="">
     </section> <!-- our story -->
     <section>
+        <h2>Why clients LOVE us?</h2>
+        <p>”Smoothie is great. I don't know what else to say. I will let my mum know about this, she could really make use of Smoothie! Smoothie saved my business.”</p>
+        <cite>- from Santa Monica, CA</cite>
     </section> <!-- Testimonials -->
 <section></section> <!-- Our Blog -->
 <section></section> <!-- Instagram -->
