add cimmit in line cite

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <section>
         <h2>Why clients LOVE us?</h2>
         <p>”Smoothie is great. I don't know what else to say. I will let my mum know about this, she could really make use of Smoothie! Smoothie saved my business.”</p>
-        <cite>- from Santa Monica, CA</cite>
+        <cite>- from Santa Monica, CA</cite>   <!-- может проще span? -->
     </section> <!-- Testimonials -->
 <section></section> <!-- Our Blog -->
 <section></section> <!-- Instagram -->
