add divs and section our blog

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href=""><img src="" alt=""></a></li>
                     <li><a href=""><img src="" alt=""></a></li>
                     <li><a href=""><img src="" alt=""></a>
-                    <span>3</span></li>
+                        <span>3</span></li>
                 </ul>
             </div>
             <div>
@@ -41,43 +41,50 @@
         <div><button>Shop now</button></div>
         <h1>SMOOTHIE</h1>
     </header>
-    
+
     <section>
-        <h2>What are these smoothies?</h2>
-        <p>A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy products (milk, yogurt, ice-cream or cottage cheese), typically using a blender. Smoothies may be made using other ingredients, such as water, crushed ice, fruit juice, sweeteners (e.g. honey, sugar, stevia, or syrup), whey powder, plant milk, nuts, nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.</p>
         <div>
-            <h3>Plant Based</h3>
-            <img src="" alt="">
+            <h2>What are these smoothies?</h2>
+            <p>A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy products (milk, yogurt,
+                ice-cream or cottage cheese), typically using a blender. Smoothies may be made using other ingredients,
+                such as water, crushed ice, fruit juice, sweeteners (e.g. honey, sugar, stevia, or syrup), whey powder,
+                plant milk, nuts, nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.</p>
         </div>
         <div>
-            <h3>Vegan</h3>
-            <img src="" alt="">
+            <div>
+                <h3>Plant Based</h3>
+                <img src="" alt="">
+            </div>
+            <div>
+                <h3>Vegan</h3>
+                <img src="" alt="">
+            </div>
+            <div>
+                <h3>Paleo</h3>
+                <img src="" alt="">
+            </div>
+            <div>
+                <h3>Gluten-Free</h3>
+                <img src="" alt="">
+            </div>
+            <div>
+                <h3>Corn-Free</h3>
+                <img src="" alt="">
+            </div>
+            <div>
+                <h3>Soy-Free</h3>
+                <img src="" alt="">
+            </div>
+            <div>
+                <h3>Ayurvedic</h3>
+                <img src="" alt="">
+            </div>
+            <div>
+                <h3>Made With Love</h3>
+                <img src="" alt="">
+            </div>
         </div>
-        <div>
-            <h3>Paleo</h3>
-            <img src="" alt="">
-        </div>
-        <div>
-            <h3>Gluten-Free</h3>
-            <img src="" alt="">
-        </div>
-        <div>
-            <h3>Corn-Free</h3>
-            <img src="" alt="">
-        </div>
-        <div>
-            <h3>Soy-Free</h3>
-            <img src="" alt="">
-        </div>
-        <div>
-            <h3>Ayurvedic</h3>
-            <img src="" alt="">
-        </div>
-        <div>
-            <h3>Made With Love</h3>
-            <img src="" alt="">
-        </div>
-    </section>    <!-- What are these smoothies? -->
+    </section> <!-- What are these smoothies? -->
     <section>
         <h2>What makes Smoothie an awesome drink?</h2>
         <div>
@@ -93,45 +100,74 @@
             </ul>
         </div>
         <button>About Organic Smoothie</button>
-    </section>    <!-- about -->
+    </section> <!-- about -->
     <section>
         <div>
-            <h3>Dark Chocolate Smoothie</h3>
-            <span>100 ml</span>
-            <button>Buy</button>
+            <div>
+                <h3>Dark Chocolate Smoothie</h3>
+                <span>100 ml</span>
+                <button>Buy</button>
+            </div>
+            <div>
+                <h3>Vegan Lettuce Smoothie</h3>
+                <span>100 ml</span>
+                <button>Buy</button>
+            </div>
+            <div>
+                <h3>Lemon Ginger Smoothie</h3>
+                <span>100 ml</span>
+                <button>Buy</button>
+            </div>
+            <div>
+                <h3>Turmeric Garlic Smoothie</h3>
+                <span>100 ml</span>
+                <button>Buy</button>
+            </div>
         </div>
-        <div>
-            <h3>Vegan Lettuce Smoothie</h3>
-            <span>100 ml</span>
-            <button>Buy</button>
-        </div>
-        <div>
-            <h3>Lemon Ginger Smoothie</h3>
-            <span>100 ml</span>
-            <button>Buy</button>
-        </div>
-        <div>
-            <h3>Turmeric Garlic Smoothie</h3>
-            <span>100 ml</span>
-            <button>Buy</button>
-        </div>
-        
+
     </section> <!-- products -->
     <section>
-        <h2>Our story</h2>
-        <p>As products typically using raw fruits or vegetables, smoothies include dietary fiber (e.g. pulp, skin, and seeds) and so are thicker than fruit juice, often with a consistency similar to a milkshake.</p>
-        <button>Who we are</button>
-        <img src="" alt="">
+        <div>
+            <h2>Our story</h2>
+            <p>As products typically using raw fruits or vegetables, smoothies include dietary fiber (e.g. pulp, skin,
+                and
+                seeds) and so are thicker than fruit juice, often with a consistency similar to a milkshake.</p>
+            <button>Who we are</button>
+        </div>
+        <div>
+            <img src="" alt="">
+        </div>
     </section> <!-- our story -->
     <section>
-        <h2>Why clients LOVE us?</h2>
-        <p>”Smoothie is great. I don't know what else to say. I will let my mum know about this, she could really make use of Smoothie! Smoothie saved my business.”</p>
-        <cite>- from Santa Monica, CA</cite>   <!-- может проще span? -->
+        <div>
+            <h2>Why clients LOVE us?</h2>
+            <p>”Smoothie is great. I don't know what else to say. I will let my mum know about this, she could really
+                make
+                use of Smoothie! Smoothie saved my business.”</p>
+            <cite>- from Santa Monica, CA</cite> <!-- может проще span? -->
+        </div>
+        <div>
+            <img src="" alt="">
+        </div>
+
     </section> <!-- Testimonials -->
-<section></section> <!-- Our Blog -->
-<section></section> <!-- Instagram -->
-<footer></footer>
+    <section>
+        <div>
+            <h2>Our blog</h2>
+        </div>
+        <div>
+            <img src="" alt="">
+        </div>
+        <div>
+            <h3>ASAFOETIDA - THE NEXT TURMERIC?</h3>
+            <p>Jun 16, 2020</p> <!-- date? -->
+            <p>If the fruit ingredients and the green vegetable ingredients are both juiced ahead of time, the mixed
+                juice
+                doesn't even have to be blended like a smoothie, i.e. a green juice or anything... <b>Read More</b> </p>
+        </div>
+    </section> <!-- Our Blog -->
+    <section></section> <!-- Instagram -->
+    <footer></footer>
 </body>
 
 </html>
-
