--- a/index.html
+++ b/index.html
@@ -169,7 +169,46 @@
         </div>
     </section> <!-- Instagram -->
     <footer>
-        
+        <div>
+            <div><img src="" alt=""></div>
+            <div>
+                <h4>Information</h4>
+                <ul>
+                    <li>Search</li>
+                    <li>Contact us</li>
+                    <li>Terms & Conditions</li>
+                    <li>Privacy Policy</li>
+                </ul>
+            </div>
+            <div>
+                <h4>Payment</h4>
+                <ul>
+                    <li><img src="" alt=""></li>
+                    <li><img src="" alt=""></li>
+                    <li><img src="" alt=""></li>
+                    <li><img src="" alt=""></li>
+                    <li><img src="" alt=""></li>
+                    <li><img src="" alt=""></li>
+                    <li><img src="" alt=""></li>
+                    <li><img src="" alt=""></li>
+                    <li><img src="" alt=""></li>
+                    <li><img src="" alt=""></li>
+                </ul>
+            </div>
+            <div>
+                <h4>Don’t miss out!</h4>
+                <form action=""><input type="email" value=""><button></button></form>
+            </div>
+            <div>
+                <p>Follow Us</p>
+                <div><img src="" alt=""></div>
+                <div><img src="" alt=""></div>
+                <div><img src="" alt=""></div>
+            </div>
+        </div>
+        <div>
+            <p>© 2020. All Rights Reserved. </p>
+        </div>
     </footer>
 </body>
 
