--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
                     <li><a href="">Testimonials</a></li>
                 </ul>
             </nav>
-            <a href=""><img src="" alt=""></a>
+            <a href=""><img src="assets/images/logo.jpg" alt="logo"></a>
             <ul>
-                <li><a href=""><img src="" alt=""></a></li>
-                <li><a href=""><img src="" alt=""></a></li>
-                <li><a href=""><img src="" alt=""></a>
+                <li><a href=""><img src="assets/images/user.png" alt="user"></a></li>
+                <li><a href=""><img src="assets/images/search.png" alt="search"></a></li>
+                <li><a href=""><img src="assets/images/cart.png" alt="cart"></a>
                     <span>3</span></li>
             </ul>
             <ul>
-                <li><a href=""><img src="" alt=""></a></li>
-                <li><a href=""><img src="" alt=""></a></li>
-                <li><a href=""><img src="" alt=""></a></li>
+                <li><a href=""><img src="assets/images/instagram.png" alt="instagram"></a></li>
+                <li><a href=""><img src="assets/images/facebook.png" alt="facebook"></a></li>
+                <li><a href=""><img src="assets/images/pinterest.png" alt="pinterest"></a></li>
             </ul>
         </div>
         <div><button>Shop now</button>
@@ -49,41 +49,64 @@
         <div>
             <div>
                 <h3>Plant Based</h3>
-                <img src="" alt="">
+                <figure>
+                    <img src="assets/images/Plant_Based.png" alt="Plant Based">
+                </figure>
             </div>
             <div>
                 <h3>Vegan</h3>
-                <img src="" alt="">
+                <figure>
+                    <img src="assets/images/vegan.png" alt="vegan">
+                </figure>
+
             </div>
             <div>
                 <h3>Paleo</h3>
-                <img src="" alt="">
+                <figure>
+                    <img src="assets/images/Paleo.png" alt="Paleo">
+                </figure>
+
             </div>
             <div>
                 <h3>Gluten-Free</h3>
-                <img src="" alt="">
+                <figure>
+                    <img src="assets/images/Gluten_Free.png" alt="Gluten-Free">
+                </figure>
+
             </div>
             <div>
                 <h3>Corn-Free</h3>
-                <img src="" alt="">
+                <figure>
+                    <img src="assets/images/Corn_Free.png" alt="Corn-Free">
+                </figure>
+
             </div>
             <div>
                 <h3>Soy-Free</h3>
-                <img src="" alt="">
+                <figure>
+                    <img src="assets/images/Soy_Free.png" alt="Soy-Free">
+                </figure>
+
             </div>
             <div>
                 <h3>Ayurvedic</h3>
-                <img src="" alt="">
+                <figure>
+                    <img src="assets/images/Ayurvedic.png" alt="Ayurvedic">
+                </figure>
+
             </div>
             <div>
                 <h3>Made With Love</h3>
-                <img src="" alt="">
+                <figure>
+                    <img src="assets/images/Made_With_Love.png" alt="Made With Love">
+                </figure>
+
             </div>
         </div>
     </section> <!-- these smoothies -->
     <section>
         <div>
-            <img src="" alt="">
+            <img src="assets/images/summer.jpg" alt="summer">
         </div>
         <div>
             <h2>What makes Smoothie an awesome drink?</h2>
@@ -133,22 +156,28 @@
             <button>Who we are</button>
         </div>
         <div>
-            <img src="" alt="">
+            <img src="assets/images/img.jpg" alt="our story">
         </div>
     </section> <!-- our story -->
     <section>
         <div>
             <h2>Why clients LOVE us?</h2>
-            <q>moothie is great. I don't know what else to say. I will let my mum know about this, she could really make
-                use of Smoothie! Smoothie saved my business.</q>
-            <cite>- from Santa Monica, CA</cite>
-            <img src="" alt="">
+            <div>
+                <div>
+                    <q>moothie is great. I don't know what else to say. I will let my mum know about this, she could
+                        really
+                        make
+                        use of Smoothie! Smoothie saved my business.</q>
+                    <cite>- from Santa Monica, CA</cite>
+                </div>
+                <img src="assets/images/reviews.jpg" alt="">
+            </div>
         </div>
     </section> <!-- Testimonials -->
     <section>
         <div>
             <h2>Our blog</h2>
-            <img src="" alt="">
+            <img src="assets/images/blog.jpg" alt="">
         </div>
         <div>
             <h3>ASAFOETIDA - THE NEXT TURMERIC?</h3>
@@ -161,53 +190,63 @@
     <section>
         <div>
             <h2>ashasuperfoods</h2>
-            <div><img src="" alt=""></div>
-            <div><img src="" alt=""></div>
-            <div><img src="" alt=""></div>
-            <div><img src="" alt=""></div>
-            <div><img src="" alt=""></div>
+            <div><img src="assets/images/instagramm_1.jpg" alt=""></div>
+            <div><img src="assets/images/instagramm_2.jpg" alt=""></div>
+            <div><img src="assets/images/instagramm_3.jpg" alt=""></div>
+            <div><img src="assets/images/instagramm_4.jpg" alt=""></div>
+            <div><img src="assets/images/instagramm_5.jpg" alt=""></div>
         </div>
     </section> <!-- Instagram -->
     <footer>
         <div>
-            <div><img src="" alt=""></div>
+            <div><img src="assets/images/logo.jpg" alt=""></div>
             <div>
                 <h4>Information</h4>
                 <ul>
-                    <li>Search</li>
-                    <li>Contact us</li>
-                    <li>Terms & Conditions</li>
-                    <li>Privacy Policy</li>
+                    <li><a href="">Search</a></li>
+                    <li><a href="">Contact us</a></li>
+                    <li><a href="">Terms & Conditions</a></li>
+                    <li><a href="">Privacy Policy</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Payment</h4>
                 <ul>
-                    <li><img src="" alt=""></li>
-                    <li><img src="" alt=""></li>
-                    <li><img src="" alt=""></li>
-                    <li><img src="" alt=""></li>
-                    <li><img src="" alt=""></li>
-                    <li><img src="" alt=""></li>
-                    <li><img src="" alt=""></li>
-                    <li><img src="" alt=""></li>
-                    <li><img src="" alt=""></li>
-                    <li><img src="" alt=""></li>
+                    <li><a href=""><img src="assets/images/amex.png" alt="amex"></a></li>
+                    <li><a href=""></a><img src="assets/images/apple.png" alt="apple"></li>
+                    <li><a href=""></a><img src="assets/images/maestro.png" alt="maestro"></li>
+                    <li><a href=""></a><img src="assets/images/discover.png" alt="discover"></li>
+                    <li><a href=""></a><img src="assets/images/jcb.png" alt="jcb"></li>
+                    <li><a href=""></a><img src="assets/images/paypal.png" alt="paypal"></li>
+                    <li><a href=""></a><img src="assets/images/mastercard.png" alt="mastercard"></li>
+                    <li><a href=""></a><img src="assets/images/shopify_pay.png" alt="shopify pay"></li>
+                    <li><a href=""></a><img src="assets/images/visa.png" alt="visa"></li>
                 </ul>
             </div>
             <div>
                 <h4>Don’t miss out!</h4>
-                <form action=""><input type="email" value=""><button></button></form>
+                <form action="">
+                    <input type="email" value="">
+                    <button>Follow Us</button>
+                </form>
             </div>
             <div>
-                <p>Follow Us</p>
-                <div><img src="" alt=""></div>
-                <div><img src="" alt=""></div>
-                <div><img src="" alt=""></div>
+                <div>
+                    <img src="assets/images/facebook.png" alt="facebook">
+                </div>
+                <div>
+                    <img src="assets/images/pinterest.png" alt="pinterest">
+                </div>
+                <div>
+                    <img src="assets/images/instagram.png" alt="instagram">
+                </div>
             </div>
         </div>
         <div>
-            <p>© 2020. All Rights Reserved. </p>
+            <div>
+                <small>© 2020. All Rights Reserved.</small>
+            </div>
+            <button>Go top</button>
         </div>
     </footer>
 </body>
