fixed bags in html

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     </section> <!-- Our Blog -->
     <section>
         <div>
-            <a href="">ashasuperfoods</a>
+            <h2><a href="">ashasuperfoods</a></h2>
             <div><img src="assets/images/instagramm_1.jpg" alt=""></div>
             <div><img src="assets/images/instagramm_2.jpg" alt=""></div>
             <div><img src="assets/images/instagramm_3.jpg" alt=""></div>
@@ -212,13 +212,14 @@
                     <input type="email" value="" placeholder="Subscribe to our newsletter" required>
                     <button>Follow Us</button>
                 </form>
-                <img src="assets/images/email.png" alt="">
             </div>
             <div>
                 <div>
-                    <a href=""><img src="assets/images/facebook.png" alt="facebook"></a>
-                    <a href=""><img src="assets/images/pinterest.png" alt="pinterest"></a>
-                    <a href=""><img src="assets/images/instagram.png" alt="instagram"></a>
+                    <ul>
+                        <li><a href=""><img src="assets/images/facebook.png" alt="facebook"></a></li>
+                        <li><a href=""><img src="assets/images/pinterest.png" alt="pinterest"></a></li>
+                        <li><a href=""><img src="assets/images/instagram.png" alt="instagram"></a></li>
+                    </ul>
                 </div>
             </div>
         </div>
