--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 
 <body>
     <header class="header">
-        <div>
-            <nav>
-                <div>
-                    <ul>
-                        <li><a href="">Shop</a></li>
-                        <li><a href="">Home</a></li>
-                        <li><a href="">Story</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Blog</a></li>
-                        <li><a href="">Testimonials</a></li>
+        <div class="header-top">
+            <nav class="header-nav nav">
+                <div class="nav">
+                    <ul class="nav-list">
+                        <li class="nav-item"><a class="nav-link" href="">Shop</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">Story</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">Blog</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">Testimonials</a></li>
                     </ul>
                 </div>
             </nav>
-            <a href=""><img src="assets/images/logo.jpg" alt="logo"></a>
+            <a class="logo-link" href=""><img class="logo-img" src="assets/images/logo.jpg" alt="logo"></a>
             <div>
                 <ul>
                     <li><a href=""><img src="assets/images/user.png" alt="user"></a></li>
