add classes in block smoothies

--- a/index.html
+++ b/index.html
@@ -97,46 +97,66 @@
     </header>
     <!-- header -->
 
-    <section>
-        <h2>What are these smoothies?</h2>
-        <p>A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy products (milk, yogurt,
-            ice-cream or cottage cheese), typically using a blender. Smoothies may be made using other ingredients,
-            such as water, crushed ice, fruit juice, sweeteners (e.g. honey, sugar, stevia, or syrup), whey powder,
-            plant milk, nuts, nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.</p>
-        <div>
-            <div>
-                <img src="assets/images/Plant_Based.png" alt="Plant Based">
-                <h3>Plant Based</h3>
+    <section class="smoothies">
+        <div class="container">
+            <div class="smoothies__main main">
+                <h2 class="main__title">What are these smoothies?</h2>
+                <p class="main__content">A smoothie is a drink made from pureed raw fruit, vegetables, and
+                    sometimes
+                    dairy products (milk, yogurt,
+                    ice-cream or cottage cheese), typically using a blender. Smoothies may be made using other
+                    ingredients,
+                    such as water, crushed ice, fruit juice, sweeteners (e.g. honey, sugar, stevia, or syrup), whey
+                    powder,
+                    plant milk, nuts, nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.
+                </p>
+                <!-- smoothies__content -->
             </div>
-            <div>
-                <img src="assets/images/vegan.png" alt="vegan">
-                <h3>Vegan</h3>
-            </div>
-            <div>
-                <img src="assets/images/Paleo.png" alt="Paleo">
-                <h3>Paleo</h3>
-            </div>
-            <div>
-                <img src="assets/images/Gluten_Free.png" alt="Gluten-Free">
-                <h3>Gluten-Free</h3>
-            </div>
-            <div>
-                <img src="assets/images/Corn_Free.png" alt="Corn-Free">
-                <h3>Corn-Free</h3>
-            </div>
-            <div>
-                <img src="assets/images/Soy_Free.png" alt="Soy-Free">
-                <h3>Soy-Free</h3>
-            </div>
-            <div>
-                <img src="assets/images/Ayurvedic.png" alt="Ayurvedic">
-                <h3>Ayurvedic</h3>
-            </div>
-            <div>
-                <img src="assets/images/Made_With_Love.png" alt="Made With Love">
-                <h3>Made With Love</h3>
+            <!-- smoothies__main -->
+            <div class="smoothies__cards cards">
+                <div class="cards__content">
+                    <img class="cards__icon" src="assets/images/Plant_Based.png" alt="Plant Based">
+                    <h3 class="cards__title">Plant Based</h3>
+                </div>
+                <!-- cards__content -->
+                <div class="cards__content">
+                    <img class="cards__icon" src="assets/images/vegan.png" alt="vegan">
+                    <h3>Vegan</h3>
+                </div>
+                <!-- cards__content -->
+                <div class="cards__content">
+                    <img class="cards__icon" src="assets/images/Paleo.png" alt="Paleo">
+                    <h3>Paleo</h3>
+                </div>
+                <!-- cards__content -->
+                <div class="cards__content">
+                    <img class="cards__icon" src="assets/images/Gluten_Free.png" alt="Gluten-Free">
+                    <h3 class="cards__title">Gluten-Free</h3>
+                </div>
+                <!-- cards__content -->
+                <div class="cards__content">
+                    <img class="cards__icon" src="assets/images/Corn_Free.png" alt="Corn-Free">
+                    <h3 class="cards__title">Corn-Free</h3>
+                </div>
+                <!-- cards__content -->
+                <div class="cards__content">
+                    <img class="cards__icon" src="assets/images/Soy_Free.png" alt="Soy-Free">
+                    <h3 class="cards__title">Soy-Free</h3>
+                </div>
+                <!-- cards__content -->
+                <div class="cards__content">
+                    <img class="cards__icon" src="assets/images/Ayurvedic.png" alt="Ayurvedic">
+                    <h3 class="cards__title">Ayurvedic</h3>
+                </div>
+                <!-- cards__content -->
+                <div class="cards__content">
+                    <img class="cards__icon" src="assets/images/Made_With_Love.png" alt="Made With Love">
+                    <h3 class="cards__title">Made With Love</h3>
+                </div>
+                <!-- cards__content -->
             </div>
         </div>
+        <!-- container -->
     </section> <!-- these smoothies -->
     <section>
         <img src="assets/images/summer.jpg" alt="summer">
