add classes in block about

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="assets/css/normalize.css">
+    <link rel="stylesheet" href="assets/css/index.css">
     <!-- Сюда подключаем стили -->
     <title>SMOOTHIE</title>
 </head>
@@ -153,28 +154,36 @@
                     <img class="cards__icon" src="assets/images/Made_With_Love.png" alt="Made With Love">
                     <h3 class="cards__title">Made With Love</h3>
                 </div>
-                <!-- cards__content -->
+
             </div>
         </div>
         <!-- container -->
-    </section> <!-- these smoothies -->
-    <section>
-        <img src="assets/images/summer.jpg" alt="summer">
-        <div>
-            <h2>What makes Smoothie an <span>awesome drink?</span></h2>
-            <ul>
-                <li>Crunchy Puffs<span>Texture</span></li>
-                <li><span>100 Calories</span> per drink</li>
-                <li> 4g Plant Protein</li>
-                <li>Good source of <span>Magnesium & Vitamin B6</span></li>
-                <li><span>No Sugar</span> in our Savory Flavors</li>
-                <li><span>Non-GMO, Vegan & Paleo</span></li>
-                <li><span>Gluten-Free & Grain-Free</span></li>
-                <li><span>Corn-Free & Soy-Free</span></li>
-            </ul>
-            <a href="">About Organic Smoothie</a>
+    </section>
+    <!-- these smoothies -->
+
+    <section class="about">
+        <div class="about__content content">
+            <img class="content__img" src="assets/images/summer.jpg" alt="summer">
         </div>
-    </section> <!-- about -->
+        <!-- about__content -->
+
+        <div class="about__main main">
+            <h2 class="main__title">What makes Smoothie an <span>awesome drink?</span></h2>
+            <ul class="main__list">
+                <li class="main__item">Crunchy Puffs<span class="main__subtitle">Texture</span></li>
+                <li class="main__item"><span class="main__subtitle">100 Calories</span> per drink</li>
+                <li class="main__item"> 4g Plant Protein</li>
+                <li class="main__item">Good source of <span class="main__subtitle">Magnesium & Vitamin B6</span></li>
+                <li class="main__item"><span class="main__subtitle">No Sugar</span> in our Savory Flavors</li>
+                <li class="main__item"><span class="main__subtitle">Non-GMO, Vegan & Paleo</span></li>
+                <li class="main__item"><span class="main__subtitle">Gluten-Free & Grain-Free</span></li>
+                <li class="main__item"><span class="main__subtitle">Corn-Free & Soy-Free</span></li>
+            </ul>
+            <a class="main__link" href="">About Organic Smoothie</a>
+        </div>
+    </section>
+    <!-- about -->
+
     <section>
         <div>
             <div>
