add classes in block products

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 
     <section class="smoothies">
         <div class="container">
-            <div class="smoothies__main main">
-                <h2 class="main__title">What are these smoothies?</h2>
-                <p class="main__content">A smoothie is a drink made from pureed raw fruit, vegetables, and
+            <div class="smoothies__content content">
+                <h2 class="content__title">What are these smoothies?</h2>
+                <p class="content__text">A smoothie is a drink made from pureed raw fruit, vegetables, and
                     sometimes
                     dairy products (milk, yogurt,
                     ice-cream or cottage cheese), typically using a blender. Smoothies may be made using other
@@ -122,12 +122,12 @@
                 <!-- cards__content -->
                 <div class="cards__content">
                     <img class="cards__icon" src="assets/images/vegan.png" alt="vegan">
-                    <h3>Vegan</h3>
+                    <h3 cards__title>Vegan</h3>
                 </div>
                 <!-- cards__content -->
                 <div class="cards__content">
                     <img class="cards__icon" src="assets/images/Paleo.png" alt="Paleo">
-                    <h3>Paleo</h3>
+                    <h3 cards__title>Paleo</h3>
                 </div>
                 <!-- cards__content -->
                 <div class="cards__content">
@@ -184,41 +184,48 @@
     </section>
     <!-- about -->
 
-    <section>
-        <div>
-            <div>
-                <h3>Dark Chocolate Smoothie</h3>
-                <span>100 ml</span>
-                <button>Buy</button>
+    <section class="products">
+        <div class="products__box box">
+            <div class="box__body">
+                <h3 class="box__title">Dark Chocolate Smoothie</h3>
+                <span class="box__subtitle">100 ml</span>
+                <button class="box__button">Buy</button>
             </div>
-            <div>
-                <h3>Vegan Lettuce Smoothie</h3>
-                <span>100 ml</span>
-                <button>Buy</button>
+            <div class="box__body">
+                <h3 class="box__title">Vegan Lettuce Smoothie</h3>
+                <span class="box__subtitle">100 ml</span>
+                <button class="box__button">Buy</button>
             </div>
-            <div>
-                <h3>Lemon Ginger Smoothie</h3>
-                <span>100 ml</span>
-                <button>Buy</button>
+            <div class="box__body">
+                <h3 class="box__title">Lemon Ginger Smoothie</h3>
+                <span class="box__subtitle">100 ml</span>
+                <button class="box__button">Buy</button>
             </div>
-            <div>
-                <h3>Turmeric Garlic Smoothie</h3>
-                <span>100 ml</span>
-                <button>Buy</button>
+            <div class="box__body">
+                <h3 class="box__title">Turmeric Garlic Smoothie</h3>
+                <span class="box__subtitle">100 ml</span>
+                <button class="box__button">Buy</button>
             </div>
         </div>
-    </section> <!-- products -->
-    <section>
-        <div>
-            <h2>Our story</h2>
-            <p>As products typically using raw fruits or vegetables, smoothies include dietary fiber (e.g. pulp, skin,
-                and
-                seeds) and so are thicker than fruit juice, often with a consistency similar to a milkshake.</p>
-            <a href="">Who we are</a>
+        <!-- products__box box -->
+    </section>
+    <!-- products -->
+
+    <section class="story">
+        <div class="container">
+            <div class="story__c">
+                <h2>Our story</h2>
+                <p>As products typically using raw fruits or vegetables, smoothies include dietary fiber (e.g. pulp,
+                    skin,
+                    and
+                    seeds) and so are thicker than fruit juice, often with a consistency similar to a milkshake.</p>
+                <a href="">Who we are</a>
+            </div>
+            <div>
+                <img src="assets/images/img.jpg" alt="our story">
+            </div>
         </div>
-        <div>
-            <img src="assets/images/img.jpg" alt="our story">
-        </div>
+        <!-- contaqiner -->
     </section> <!-- our story -->
     <section>
         <div>
