fixed bages in HTML

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </div>
         <!-- container -->
     </section>
-    <!-- these smoothies -->
+    <!--smoothies -->
 
     <section class="about">
         <img class="about__img" src="assets/images/summer.jpg" alt="summer">
@@ -176,6 +176,7 @@
         <!-- about__wrapper -->
     </section>
     <!-- about -->
+
     <section class="products">
 
         <div class="products__item">
@@ -230,19 +231,21 @@
     <section class="testimonials">
         <div class="container">
             <div class="testimonials__inner">
-
                 <h2 class="testimonials__title title">Why clients <span class="testimonials__title--bold">LOVE</span>
                     us?</h2>
-                <!---->
                 <div class="testimonials__box">
                     <q class="testimonials__quote">moothie is great. I don't know what else to say. I will let my mum
                         know about this, she could really make use of Smoothie! Smoothie saved my business.</q>
                     <cite class="testimonials__cite">- from Santa Monica, CA</cite>
                     <img class="testimonials__img" src="assets/images/reviews.jpg" alt="reviews">
                 </div>
+                <!-- testimonials__box -->
             </div>
+            <!-- testimonials__inner -->
         </div>
-    </section> <!-- Testimonials -->
+        <!-- container -->
+    </section>
+    <!-- testimonials -->
 
     <section class="blog">
         <div class="blog__wrapper">
@@ -262,7 +265,9 @@
             <!-- blog__box -->
         </div>
         <!-- blog__wrapper -->
-    </section> <!-- Our Blog -->
+    </section>
+    <!-- Our Blog -->
+
     <section class="instagram">
         <h2 class="instagram__title title"><a class="instagram__link" href="#">ashasuperfoods</a></h2>
         <div class="instagram__inner">
@@ -277,24 +282,25 @@
             <div class="instagram__picture"><img class="instagram__img" src="assets/images/instagramm_5.jpg"
                     alt="instagramm"></div>
         </div>
-        <!-- instagram -->
-    </section> <!-- Instagram -->
+        <!-- instagram__inner -->
+    </section>
+    <!-- Instagram -->
+
     <footer class="footer__top">
         <div class="footer__wrapper">
-
             <img class="logo footer__logo" src="assets/images/logo.jpg" alt="logo">
-
-
-            <div class="footer__info info"></div>
-            <h4 class="imfo__title">Information</h4>
-            <ul class="info__list">
-                <li class="info__item"><a class="info__link" href="#">Search</a></li>
-                <li class="info__item"><a class="info__link" href="#">Contact us</a></li>
-                <li class="info__item"><a class="info__link" href="#">Terms & Conditions</a></li>
-                <li class="info__item"><a class="info__link" href="#">Privacy Policy</a></li>
-            </ul>
+            <div class="footer__info info">
+                <h4 class="imfo__title">Information</h4>
+                <ul class="info__list">
+                    <li class="info__item"><a class="info__link" href="#">Search</a></li>
+                    <li class="info__item"><a class="info__link" href="#">Contact us</a></li>
+                    <li class="info__item"><a class="info__link" href="#">Terms & Conditions</a></li>
+                    <li class="info__item"><a class="info__link" href="#">Privacy Policy</a></li>
+                </ul>
+            </div>
+            <!-- footer__info info -->
         </div>
-        <!-- footer__information information -->
+        <!-- footer__wrapper -->
         <div class="footer__payment payment">
             <h4 class="payment__title">Payment</h4>
             <div class="payment__box">
@@ -318,7 +324,7 @@
                 <button class="footer__btn">Follow Us</button>
             </form>
         </div>
-
+        <!-- footer__box -->
         <div class="footer__social">
             <ul class="footer__list">
                 <li class="footer__item"><a class="footer__link" href="#"><img class="footer__img"
@@ -330,11 +336,11 @@
             </ul>
         </div>
         <!-- footer__social -->
-
         <div class="footer__bottom bottom">
             <small class="bottom__small">© 2020. All Rights Reserved.</small>
             <a class="bottom__link" href="#">Go top</a>
         </div>
+        <!-- footer__bottom bottom -->
     </footer>
 </body>
 
