--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </li>
                     <li class="personal__item">
                         <a class="personal__link" href="#">
-                            <img class="personal__icon" src="assets/images/user.png" alt="user">
+                            <img class="personal__icon" src="assets/images/user.png" alt="useregor">
                         </a>
                     </li>
                     <li class="personal__item">
